[package]
name = "RedunX"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
regex = "1.11.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
virustotal = "2.0.0"
virustotal3 = "3.0.2"
