[package]
name = "RedunX"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
virustotal = "2.0.0"
virustotal3 = "3.0.2"
warp = "0.3.7"
