[package]
name = "redun_x"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
regex = "1.11.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
